<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/sda_symbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sda_symbol"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.256" />

    <TextView
        android:id="@+id/sda_company_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sda_company_name"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sda_symbol"
        app:layout_constraintVertical_bias="0.067" />

    <TextView
        android:id="@+id/sda_latest_stock_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sda_latest_stock_price"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sda_company_name"
        app:layout_constraintVertical_bias="0.08" />

    <TextView
        android:id="@+id/sda_latest_price_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sda_latest_price_change"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.188"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sda_latest_stock_price"
        app:layout_constraintVertical_bias="0.095" />

    <TextView
        android:id="@+id/sda_price_change_percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sda_price_change_percentage"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sda_latest_price_change"
        app:layout_constraintVertical_bias="0.103" />

</androidx.constraintlayout.widget.ConstraintLayout>
